--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash.uniqueid": "^4.0.1",
+    "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
-    "prettier": "^2.8.1",
     "@astral/eslint-config-base": "^1.6.1",
-    "@astral/prettier-config": "^1.6.1"
+    "@astral/prettier-config": "^1.6.1",
+    "prettier": "^2.8.1",
+    "unsplash-js": "^7.0.19"
   },
   "scripts": {
     "start": "react-scripts start",
